--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div class="col-lg-6">
-          <img class="title-image" src="images/m11.JPG" alt="oprah">
+          <img class="title-image" src="images/m11.jpg" alt="mendel">
         </div>
 
       </div>
